# ceq

./: .env.example  .gitignore  AGENTS.md  BRAND.md  CLAUDE.md  ECOSYSTEM.md  README.md  enclii.yaml  llms-full.txt  llms.txt  package.json  pnpm-lock.yaml  turbo.json
.serena/: project.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/src/ceq_api/: __init__.py  config.py  credit_ledger.py  entitlements.py  job_billing.py  logging.py  main.py  metrics.py  middleware.py  quotas.py  resilience.py  seed_templates.py
apps/api/src/ceq_api/alembic/: env.py
apps/api/src/ceq_api/alembic/versions/: 0d39ee97cdbd_initial_schema.py  20260513_align_outputs_contract.py  20260514_outputs_job_storage_unique.py  20260601_add_credit_ledger.py  8a3f1c4e5d20_add_feature_interest.py
apps/api/src/ceq_api/auth/: __init__.py  janua.py
apps/api/src/ceq_api/db/: __init__.py  redis.py  session.py
apps/api/src/ceq_api/models/: __init__.py  asset.py  base.py  credit.py  feature_interest.py  job.py  output.py  template.py  workflow.py
apps/api/src/ceq_api/render/: __init__.py  cache.py  hash.py
apps/api/src/ceq_api/render/renderers/: __init__.py  audio_tone_beep.py  card.py  card_plate_3d.py
apps/api/src/ceq_api/routers/: __init__.py  assets.py  credits.py  demo.py  health.py  intent.py  interest.py  jobs.py  operations.py  outputs.py  printability.py  render.py  synthesis.py  templates.py  workflows.py
apps/api/src/ceq_api/scripts/: seed_db.py
apps/api/src/ceq_api/services/: __init__.py  crm_sync.py  job_webhooks.py
apps/api/src/ceq_api/storage/: __init__.py
apps/api/tests/: __init__.py  conftest.py  test_3d_renderer.py  test_assets.py  test_audio_renderer.py  test_auth.py  test_config.py  test_credits.py  test_database.py  test_demo.py  test_entitlements.py  test_health.py  test_intelligence_layer.py  test_jobs.py  test_k8s_manifests.py  test_main.py  test_middleware.py  test_migrations.py  test_models.py  test_operations.py  test_outputs.py  test_render.py  test_resilience.py  test_templates.py  test_websocket.py  test_workflows.py
apps/workers/: .dockerignore  Dockerfile  Dockerfile.slim  README.md  docker-compose.yml  pyproject.toml
apps/workers/scripts/: deploy-vast.sh  destroy-workers.sh  list-workers.sh
apps/workers/src/ceq_worker/: __init__.py  comfyui.py  config.py  handler.py  model_cache.py  orchestrator.py  queue.py  storage.py
apps/workers/src/ceq_worker/providers/: __init__.py  base.py  fal.py  furnace.py  router.py  vast.py
apps/workers/tests/: __init__.py  conftest.py  test_comfyui.py  test_config.py  test_handler.py  test_model_cache.py  test_providers.py  test_queue.py  test_storage.py
docs/: API.md  CEQ_CODEBASE_AUDIT_WRAPUP_2026-06-02.md  CEQ_STABILITY_ROADMAP.md  (+19 more)
(+162 files in other folders)
