[project]
name = "ceq-api"
version = "0.1.0"
description = "Creative Entropy Quantized - Workflow Orchestration API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PROPRIETARY" }
authors = [{ name = "MADFAM", email = "engineering@madfam.io" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "boto3>=1.34.0",  # R2 storage
    "websockets>=12.0",
    "prometheus-client>=0.20.0",
    "jsonschema>=4.21.0",  # Input validation
    "slowapi>=0.1.9",  # Rate limiting
    "python-json-logger>=2.0.0",  # Structured logging
    "PyJWT[crypto]>=2.8.0",  # JWKS RS256 token validation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",  # In-memory SQLite for tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
