[project]
name = "ceq-worker"
version = "0.1.0"
description = "Creative Entropy Quantized - ComfyUI GPU Worker"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PROPRIETARY" }
authors = [{ name = "MADFAM", email = "engineering@madfam.io" }]

dependencies = [
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "boto3>=1.34.0",  # R2 storage
    "pillow>=10.0.0",
    "aiofiles>=23.0.0",
    "prometheus-client>=0.20.0",
    "websockets>=12.0",
    # ComfyUI integration
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "safetensors>=0.4.0",
]

[project.scripts]
ceq-worker = "ceq_worker.queue:main"
ceq-orchestrator = "ceq_worker.orchestrator:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
